# system_monitor_client

./: .env.template  main.py  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  config.py  routes.py  session.py
venvee/: pyvenv.cfg
