[project]
name = "system-monitor-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "openai==1.97.0",
    "openai-agents==0.2.2",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "litellm>=1.72.6.post1"
]
